feat: update post
